@@ -31,6 +31,7 @@
 * Sometimes there was a missing pixel in the internal editor where two lines touch each other
 * The 3 timers (best time, flag tag time, current time) are now properly centered on screen
 * Fix bike flickering at high zoom
+* Fix some minor bike jitters in replay playback when bike or wheel rotates past an angle of 0 degrees (upright position)
 
 ## Removed Legacy Features
 * It is no longer possible to upgrade from across.res to elma.res
